# CSTIMER_AGENT

./: .gitignore  README.md  START.py
backend/: pyproject.toml
backend/app/: __init__.py  main.py  settings.py
backend/app/api/: schemas.py  ws.py
backend/app/api/routers/: agent.py  ai.py  dashboard.py  devices.py  formulas.py  import_data.py  replay.py  sessions.py  solves.py  training.py  users.py  ws.py
backend/app/domain/: cfop_detector.py  cube_model.py  daily_goal.py  move_efficiency.py  pause_analyzer.py  session_aggregator.py  solve_recorder.py  training_engine.py
backend/app/llm/: agent.py  ai_coach.py  client.py
backend/app/persistence/: cstimer_importer.py  db.py  formula_i18n.py  formula_importer.py  models.py  repositories.py
backend/app/services/: cube_device.py
backend/app/utils/: async_dispatch.py
backend/cstimer_coach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data/formulas_cache/: CMLL.json  COLL.json  F2L.json  OLL.json  OLLCP.json  PLL.json  Winter_Variation.json  ZBLL.json
backend/scripts/: import_formulas.py  run_demo.py  test_websocket_manual.py
backend/tests/: conftest.py  test_agent.py  test_aggregator_and_engine.py  test_api.py  test_cfop_detector.py  test_cstimer_importer.py  test_cube_model.py  test_devices.py  test_formulas.py  test_pause_and_efficiency.py  test_websocket.py
docs/: 00-index.md  01-architecture.md  02-database-schema.md  03-core-pseudocode.md  04-ai-prompt.md  05-training-generator.md  06-frontend-dashboard.md  07-prototype-mock.md
frontend/: index.html  package-lock.json  package.json  (+3 more)
(+40 files in other folders)
